# archipelagopy

./: LICENSE  README.md  pyproject.toml
examples/: advanced_client.py  basic_client.py  chat_client.py  multiple_clients.py  simple_client.py
src/archipelago_py/: __init__.py  callback_interface.py  client.py
src/archipelago_py/enums/: __init__.py  client_status.py  client_tag.py  packet_problem_type.py  permission.py  print_json_type.py  slot_type.py
src/archipelago_py/packets/: __init__.py  packet.py  type_adapter.py
src/archipelago_py/structs/: __init__.py  data_package_data.py  data_storage_operation.py  game_data.py  json_message_part.py  network_item.py  network_player.py  network_slot.py  permissions.py  struct.py  version.py
src/archipelagopy/: __init__.py  callback_interface.py  client.py
src/archipelagopy/enums/: __init__.py  connection_refused_flag.py  hint_status.py  (+6 more)
tests/: test_connect.py  test_exceptions.py  test_packet_adapter.py  test_reconnect.py  test_reconnect_threshold.py
tests/callbacks/: __init__.py  test_callbacks.py  test_callbacks.txt  test_client_callbacks.py  test_packet_callbacks.py  test_type_check.py
tests/connecting/: test_connect.py  test_connect.txt
tests/exceptions/: test_connection_error.py
tests/parsing/: __init__.py  test_bounced.py  test_connected.py  test_connection_refused.py  test_data_package.py  test_parsing.py  test_print_json.py  test_received_items.py  test_room_info.py  test_room_update.py
tests/test_connect/: client_connect_packet.txt  room_info.txt  server_post_connected.txt  test_connect.txt
(+185 files in other folders)
